Enable Android Minecraft launch with MobileGlues and embedded HotSpot.
Stage Pojav/FCL natives, bind a single pojavexec into the :game Surface, and use an opengles3 + MobileGlues renderer path so 1.21.10 can start on device.

Co-authored-by: Cursor <cursoragent@cursor.com>